# sok-ble

./: AGENTS.md  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements-dev.txt  todo.md
.github/workflows/: ci.yml  prerelease.yml  release-please.yml  release.yml  test.yml
sok_ble/: sok_bluetooth_device.py  sok_parser.py
src/sok_ble/: sok_bluetooth_device.py  sok_parser.py
tests/: test_derived.py  test_device_full.py  test_device_minimal.py  test_integration_mock.py  test_parser_full.py
